refactor: group module imports by function
A bit easier to read

--- a/main.tex
+++ b/main.tex
@@ -4,16 +4,23 @@
 
 \documentclass[a4paper,11pt]{article}
 
-\usepackage{geometry} % for adding a page margin
-\usepackage{lmodern,textcomp} % to select font type
-\usepackage[dvipsnames]{xcolor} % for colored links and divider
-\usepackage{enumitem} % for \item lists
-\usepackage{tabularx} % for sections
-\usepackage{titlesec} % for section titles
-\usepackage{ifthen} % to enable if else statements
-\usepackage{fontawesome5} % for social icons
-\usepackage[unicode, draft=false]{hyperref} % for hyperlinks
-\usepackage{fancyhdr} % for header & footer
+% Essential/core packages
+\usepackage{geometry}  % for page layout
+\usepackage{ifthen}    % for conditional statements
+
+% Font and typography packages
+\usepackage{lmodern,textcomp}  % for font selection
+\usepackage[dvipsnames]{xcolor} % for font & background colors
+
+% Content and layout packages
+\usepackage{enumitem}  % for list customisation
+\usepackage{tabularx}  % for table customisation
+\usepackage{titlesec}  % for section formatting
+\usepackage{fancyhdr}  % for headers and footers
+
+% Miscellaneous
+\usepackage{fontawesome5}  % for icons
+\usepackage[unicode, draft=false]{hyperref}  % for hyperlinks
 
 % ------
 % Style
