feat: link to website

--- a/main.tex
+++ b/main.tex
@@ -103,8 +103,11 @@
 }
 \fancyhead[R]{%
   \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.05\height}\faEnvelope\ \underline{rowanmolony@gmail.com}} \\
-  \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.05\height}\faLinkedin\ \underline{rowanmolony}} \\
-  \href{https://github.com/rdmolony/my-cv}{\raisebox{-0.05\height}\faGithub\ \underline{rdmolony}}
+  \href{https://www.rowanmolony.com}{\raisebox{-0.05\height}\faGlobe\ \underline{rowanmolony.com}} \\
+  \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.05\height}\faLinkedin\ \underline{rowanmolony}}
+}
+\fancyfoot[C]{
+  \href{https://github.com/rdmolony/my-cv}{\raisebox{-0.05\height}\faGithub\ \underline{source}}
 }
 
 
