--- a/main.tex
+++ b/main.tex
@@ -222,10 +222,10 @@
       Infrastructure as Code (Terraform, AWS CDK)\skillref{PS}
 
       \item \textbf{Data Analysis}:
-      Linear Optimization (bespoke)\skillref{CD},
-      Data Wrangling (Pandas)\skillref{CD},
+      Linear Optimization (bespoke)\skillref{PS},
+      Data Wrangling (Pandas)\skillref{TL}\ssep\skillref{PS}\ssep\skillref{MRP}\ssep\skillref{CD},
       Workflow Orchestration (Ploomber, Prefect)\skillref{CD},
-      Geospatial Analysis (GeoPandas)\skillref{CD},
+      Geospatial (GeoPandas)\skillref{CD},
       Machine Learning (scikit-learn)\skillref{CD},
       Network Analysis (networkx)\skillref{CD}
 
