feat: add programming languages

--- a/main.tex
+++ b/main.tex
@@ -197,6 +197,11 @@
 \begin{minipage}[t]{0.97\textwidth}
   \begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
 
+      \item \textbf{Programming Languages}:
+      Python\skillref{TL}\ssep\skillref{PS}\ssep\skillref{MRP}\ssep\skillref{CD},
+      JavaScript\skillref{TL}\ssep\skillref{PS}\ssep\skillref{MRP}\ssep\skillref{CD},
+      Nix\skillref{TL}\ssep\skillref{PS}\ssep\skillref{MRP}
+
       \item \textbf{Backend}:
       Server-Side Rendered HTML (Django, HTMX)\skillref{TL}\ssep\skillref{MRP},
       REST APIs (Django Rest Framework)\skillref{TL}\ssep\skillref{MRP},
