feat: combine Bachelor's & Master's

--- a/main.tex
+++ b/main.tex
@@ -168,24 +168,16 @@
 \section{Education}
 
 \cventry
-  {Master of Mechanical Engineering}
+  {Master \& Bachelor of Mechanical Engineering}
   {Trinity College, Dublin}
-  {Sept 2018 - June 2019}
+  {Sept 2014 - June 2019}
   {
     \item 
-    I graduated my Master's degree with 1st class honours, including a thesis in energy systems analysis. I was one of eight people selected to participate in a one year user-centered design project - funded by a corporate sponsor.
+    I graduated both degrees with 1st class honours, including a gold medal for my undergraduate results (for averaging over 80
+    \%), and a Master's thesis in energy systems.
+    I was also one of eight people selected to participate in an international yearlong user-centered design project, partnered with the University of Sao Paolo, Brazil, \& funded by a corporate sponsor, for which we were picked out as a \underline{\href{https://sugar-network.org/projects/}{Spotlight Project}}.
     \vspace{4pt}
   }
-
-  \cventry
-  {Bachelor of Mechanical Engineering}
-  {Trinity College, Dublin}
-  {Sept 2014 - June 2018}
-  {
-    \item 
-    I graduated my Bachelor's degree with 1st class honours (gold medal). The degree remained multidisciplinary for two years, which exposed me to multiple courses in the programming languages C++ \& Matlab.
-  }
-
 
 
 %--------
