feat: reword experience

--- a/main.tex
+++ b/main.tex
@@ -137,9 +137,13 @@
   {Aug 2024 - Apr 2025}
   {
       \item
-      Terry McGrenaghan \& I initially formed PowerScope Ltd to create a software tool to empower solar panel installers to assess the investment case for battery storage.
-      \item 
-      I (a) built a linear optimisation framework tailored for timeseries data \& a battery dispatch model on top of it, (c) a financial modelling framework \& model, (c) an interactive web application on the AWS Amplify stack.
+      I initially co-founded PowerScope Ltd to create a software tool to empower solar panel installers to assess the investment case for battery storage, \& in the process, I grew:
+      \begin{itemize}
+        \item
+        A linear optimisation \& financial modelling framework, \& a battery dispatch model on top of it, 
+        \item 
+        A serverless interactive web application to interact with it.
+      \end{itemize}
   }
 
 \cventry
@@ -148,9 +152,13 @@
   {Oct 2021 - Dec 2023}
   {
       \item
-      I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues.
-      \item 
-      I (a) captured the developer environment, (b) grew a test suite (unit, integration, \& end to end) from nil to cover common usage patterns in continuous integration, (c) simplified the system's architecture by removing, combining, or replacing its constituent components. The resulting system was far more robust, understandable and maintainable while continuing to enable the same functionality.
+      I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues, \& in the process, I grew:
+      \begin{itemize}
+        \item 
+        A high coverage test suite (unit, integration, \& end to end) from nil in continuous integration,
+        \item 
+        A simplified system architecture by removing, combining, or replacing its constituent components, which continued to serve the system's user needs above \& beyond its original functionality.
+      \end{itemize}
   }
 
 \cventry
@@ -159,7 +167,7 @@
   {Aug 2019 - Oct 2021}
   {
       \item 
-      I was tasked with modelling Dublin's built environment (as part of the Dublin Region Energy Masterplan) to enable estimating the impact of energy policy on Dublin's energy system. I built my own toolkit and energy model \href{https://github.com/codema-dev/projects}{\underline{in the open on GitHub}} on top of open source libraries.
+      I was tasked with modelling Dublin's built environment (as part of the Dublin Region Energy Masterplan) to enable estimating the impact of energy policy decisions on the Dublin energy system. To deliver this, I built a reproducible data wrangling toolkit and energy model (available at \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
   }
 
 %-----------
@@ -175,7 +183,7 @@
     \item 
     I graduated both degrees with 1st class honours, including a gold medal for my undergraduate results (for averaging over 80
     \%), and a Master's thesis in energy systems.
-    I was also one of eight people selected to participate in an international yearlong user-centered design project, partnered with the University of Sao Paolo, Brazil, \& funded by a corporate sponsor, for which we were picked out as a \underline{\href{https://sugar-network.org/projects/}{Spotlight Project}}.
+    I was also one of eight people selected to participate in a yearlong user-centered design project, partnered with the University of Sao Paolo, Brazil, \& funded by a corporate sponsor, for which we were picked out as a spotlight project (on \raisebox{-0.1\height}\faGlobe\ \underline{\href{https://sugar-network.org/projects/}{sugar-network.org}}).
     \vspace{4pt}
   }
 
