feat: reorder header website links

--- a/main.tex
+++ b/main.tex
@@ -101,13 +101,13 @@
 \fancyhead[C]{%
   \huge{\textbf{Rowan Molony}}
 }
-\fancyhead[R]{%
+\fancyhead[L]{%
   \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.25\height}\faEnvelope\ \underline{rowanmolony@gmail.com}} \\
-  \href{https://www.rowanmolony.com}{\raisebox{-0.25\height}\faGlobe\ \underline{rowanmolony.com}} \\
-  \href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.25\height}\faLinkedin\ \underline{rowanmolony}}
+  \href{https://www.rowanmolony.com}{\raisebox{-0.25\height}\faGlobe\ \underline{rowanmolony.com}}
 }
-\fancyfoot[C]{
-  \href{https://github.com/rdmolony/my-cv}{\raisebox{-0.2\height}\faGithub\ \underline{source}}
+\fancyhead[R]{%
+\href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.25\height}\faLinkedin\ \underline{rowanmolony}} \\
+  \href{https://github.com/rdmolony}{\raisebox{-0.2\height}\faGithub\ \underline{rdmolony}}
 }
 
 
