feat: update cv

--- a/main.tex
+++ b/main.tex
@@ -103,12 +103,12 @@
   \huge{\textbf{Rowan Molony}}
 }
 \fancyhead[L]{%
-  \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.25\height}\faEnvelope\ \underline{rowanmolony@gmail.com}} \\
-  \href{https://www.rowanmolony.com}{\raisebox{-0.25\height}\faGlobe\ \underline{rowanmolony.com}}
+  \href{mailto:rowanmolony@gmail.com}{\raisebox{-0.1\height}\faEnvelope\ \underline{rowanmolony@gmail.com}} \\
+  \href{https://www.rowanmolony.com}{\raisebox{-0.05\height}\faGlobe\ \underline{rowanmolony.com}}
 }
 \fancyhead[R]{%
-\href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.25\height}\faLinkedin\ \underline{rowanmolony}} \\
-  \href{https://github.com/rdmolony}{\raisebox{-0.2\height}\faGithub\ \underline{rdmolony}}
+\href{https://linkedin.com/in/rowanmolony}{\raisebox{-0.1\height}\faLinkedin\ \underline{rowanmolony}} \\
+  \href{https://github.com/rdmolony}{\raisebox{-0.1\height}\faGithub\ \underline{rdmolony}}
 }
 
 \fancyfoot[R]{%
@@ -174,7 +174,7 @@
   {Aug 2019 - Oct 2021}
   {
       \item 
-      I was tasked with modelling Dublin's built environment (as part of the Dublin Region Energy Masterplan) to enable estimating the impact of energy policy decisions on the Dublin energy system. To deliver this, I built a reproducible data wrangling toolkit and energy model (available at \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
+      I was tasked with modelling Dublin's built environment (as part of the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}}) to enable estimating the impact of local \& regional energy policy decisions on the Dublin energy system. To deliver this, I built a reproducible data wrangling toolkit and energy model (available at \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
   }
 
 %-----------
@@ -188,9 +188,9 @@
   {Sept 2014 - June 2019}
   {
     \item 
-    I graduated both degrees with 1st class honours, including a gold medal for my undergraduate results (for averaging over 80
-    \%), and a Master's thesis in energy systems.
-    I was also one of eight people selected to participate in a yearlong user-centered design project, partnered with the University of Sao Paolo, Brazil, \& funded by a corporate sponsor, for which we were picked out as a spotlight project (on \raisebox{-0.1\height}\faGlobe\ \underline{\href{https://sugar-network.org/projects/}{sugar-network.org}}).
+    I earned 1st class honours for both degrees, and was awarded a gold medal for my undergraduate results (for averaging over 80
+    \%).
+    In my Master's year I completed a thesis in energy systems, and was one of eight people selected to participate in a yearlong user-centered design project, partnered with the University of Sao Paolo, Brazil, \& funded by a corporate sponsor, for which we were picked out as a spotlight project (on \raisebox{-0.05\height}\faGlobe\ \underline{\href{https://sugar-network.org/projects/}{sugar-network.org}}).
     \vspace{4pt}
   }
 
