feat: remove 5E3 experience

--- a/main.tex
+++ b/main.tex
@@ -188,9 +188,7 @@
   {Sept 2014 - June 2019}
   {
     \item 
-    I earned 1st class honours for both degrees, and was awarded a gold medal for my undergraduate results (for averaging over 80
-    \%).
-    In my Master's year I completed a thesis in energy systems, and was one of eight people selected to participate in a yearlong user-centered design project, partnered with the University of Sao Paolo, Brazil, \& funded by a corporate sponsor, for which we were picked out as a spotlight project (on \raisebox{-0.05\height}\faGlobe\ \underline{\href{https://sugar-network.org/projects/}{sugar-network.org}}).
+    Awarded a 1st class honours for both degrees and a gold medal for averaging over 80\% in undergraduate results.
     \vspace{4pt}
   }
 
