feat: add interests

--- a/main.tex
+++ b/main.tex
@@ -205,8 +205,17 @@
   {
     \item 
     Awarded a 1st class honours for both degrees and a gold medal for averaging over 80\% in undergraduate results.
-    \vspace{4pt}
   }
+
+%-----------
+% Interests
+%-----------
+\section{Interests}
+\begin{minipage}[t]{0.97\textwidth}
+  \begin{itemize}[nosep, leftmargin=2em, itemsep=4pt]
+    \item Avid boulderer/rock climber (indoors), hiker (Kilimanjaro in 2024 - never again!), sea swimmer (especially in Irish winter), surfer (in less than 5 feet of waves)
+  \end{itemize}
+\end{minipage}
 
 % -------------
 \end{document}
