feat: reword in passive voice

--- a/main.tex
+++ b/main.tex
@@ -147,20 +147,20 @@
   {Python, Django, PostgreSQL, Docker, Nix, Azure, Nbdev}
   {
       \item 
-      I formed Thalora Ltd through which I continued working with Mainstream Renewable Power (see below) on a consultancy basis.
+      Formed Thalora Ltd to assist Django-based organisations with web development. Continued working with Mainstream Renewable Power (see below) on a consultancy basis.
   }
 
 \cventry
   {Software Engineer / Co-Founder}
   {PowerScope Ltd}
   {Aug 2024 - Apr 2025}
-  {Python, TypeScript, NodeJS, React, AWS, Lambda, DynamoDB, Docker, Nix, Terraform, CDK, Nbdev}
+  {Python, TypeScript, NodeJS, React, AWS, Lambda, DynamoDB, Docker, Nix, Terraform, CDK}
   {
       \item
-      I initially co-founded PowerScope Ltd to create a software tool to empower solar panel installers to assess the investment case for battery storage, \& in the process, I grew:
+      Co-founded PowerScope Ltd to create a software tool to empower solar panel installers to assess the investment case for battery storage for commercial tenders, \& in the process, developed:
       \begin{itemize}
         \item
-        A linear optimisation \& financial modelling framework, \& a battery dispatch model on top of it, 
+        A linear optimisation \& financial modelling framework, \& a battery dispatch model on top of it.
         \item 
         A serverless interactive web application to interact with it.
       \end{itemize}
@@ -170,15 +170,15 @@
   {Web Developer}
   {Mainstream Renewable Power (MRP)}
   {Oct 2021 - Dec 2023}
-  {Python, Django, PostgreSQL, Docker, Nix, Azure, Nbdev}
+  {Python, Django, JavaScript, PostgreSQL, Docker, Nix, Azure, Nbdev}
   {
       \item
-      I fully rebuilt the backend of the MRP data platform, StationManager, to resolve its reliability issues, \& in the process, I grew:
+      Fully rebuilt the MRP data platform to resolve its reliability issues, \& in the process, developed:
       \begin{itemize}
         \item 
-        A high coverage test suite (unit, integration, \& end to end) from nil in continuous integration,
+        A much simplified system architecture by removing, combining, or replacing its constituent components, which continued to serve the system's user needs above \& beyond its original functionality. For more information see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}.
         \item 
-        A simplified system architecture by removing, combining, or replacing its constituent components, which continued to serve the system's user needs above \& beyond its original functionality.
+        A high coverage test suite (unit, integration, \& end to end) from nil running in continuous integration.
       \end{itemize}
   }
 
@@ -189,7 +189,7 @@
   {Python, Pandas, scikit-learn, Jupyter, Docker, Git}
   {
       \item 
-      I was tasked with modelling Dublin's built environment (as part of the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}}) to enable estimating the impact of local \& regional energy policy decisions on the Dublin energy system. To deliver this, I built a reproducible data wrangling toolkit and energy model (available at \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
+      Co-created the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}} (as part of a team of four) to estimate the impact of local \& regional energy policy decisions on the Dublin energy system, \& in the process developed an open source energy model and data wrangling toolkit (available at \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}). For more information see \href{https://www.rowanmolony.com/post/on-building-reproducible-data-analytics-20231109}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}.
   }
 
 %-----------
@@ -204,7 +204,7 @@
   {C++, MATLAB}
   {
     \item 
-    Awarded a 1st class honours for both degrees and a gold medal for averaging over 80\% in undergraduate results.
+    Awarded a 1st class honours for both degrees, and a gold medal for averaging over 80\% in undergraduate results.
   }
 
 %-----------
