feat: reword cv entries

--- a/main.tex
+++ b/main.tex
@@ -144,7 +144,7 @@
   {Software Engineer / Founder}
   {Thalora Ltd}
   {Jan 2024 - Present}
-  {Python, Django, PostgreSQL, Docker, Nix, Azure, Nbdev}
+  {Python, Django, JavaScript, PostgreSQL, TimescaleDB, SQLite, Docker, Nix, Azure, Nbdev}
   {
       \item 
       Formed Thalora Ltd to assist Django-based organisations with web development. Continued working with Mainstream Renewable Power (see below) on a consultancy basis.
@@ -157,12 +157,14 @@
   {Python, TypeScript, NodeJS, React, AWS, Lambda, DynamoDB, Docker, Nix, Terraform, CDK}
   {
       \item
-      Co-founded PowerScope Ltd to create a software tool to empower solar panel installers to assess the investment case for battery storage for commercial tenders, \& in the process, developed:
+      Co-founded PowerScope Ltd to empower solar panel installers to assess the investment case for battery storage for commercial tenders, \& in the process:
       \begin{itemize}
         \item
-        A linear optimisation \& financial modelling framework, \& a battery dispatch model on top of it.
+        Developed a battery dispatch model on top of an optimisation \& financial modelling framework to enable estimating "best case" financial feasibility of battery \& solar projects.
         \item 
-        A serverless interactive web application to interact with it.
+        Continuously deployed a serverless interactive web application to grant access to it.
+        \item
+        Iterated on the business model over 10 or so pilot projects with various customer segments (solar installers, asset owners, energy brokers etc.)
       \end{itemize}
   }
 
@@ -170,15 +172,17 @@
   {Web Developer}
   {Mainstream Renewable Power (MRP)}
   {Oct 2021 - Dec 2023}
-  {Python, Django, JavaScript, PostgreSQL, Docker, Nix, Azure, Nbdev}
+  {Python, Django, JavaScript, PostgreSQL, TimescaleDB, SQLite, Docker, Nix, Azure, Nbdev}
   {
       \item
-      Fully rebuilt the MRP data platform to resolve its reliability issues, \& in the process, developed:
+      Fully rebuilt the MRP data platform to resolve its reliability issues, \& in the process:
       \begin{itemize}
+        \item
+        Built a reliable data pipeline spanning multiple servers and databases to keep the data platform in daily sync with over 100 operational weather stations, and grant analysts and station managers access to data.
         \item 
-        A much simplified system architecture by removing, combining, or replacing its constituent components, which continued to serve the system's user needs above \& beyond its original functionality. For more information see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}.
+        Simplified the system architecture over time by removing, combining, or replacing its constituent components to ease its maintenance burden, while continuing to serve the system's user needs above \& beyond its original functionality (see \href{https://www.rowanmolony.com/post/on-reengineering-a-legacy-data-platform-20231204}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}).
         \item 
-        A high coverage test suite (unit, integration, \& end to end) from nil running in continuous integration.
+        A high coverage test suite (unit, integration, \& end to end) from nil running in continuous integration to help maintain the system's reliability.
       \end{itemize}
   }
 
@@ -189,7 +193,12 @@
   {Python, Pandas, scikit-learn, Jupyter, Docker, Git}
   {
       \item 
-      Co-created the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}} (as part of a team of four) to estimate the impact of local \& regional energy policy decisions on the Dublin energy system, \& in the process developed an open source energy model and data wrangling toolkit (available at \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}). For more information see \href{https://www.rowanmolony.com/post/on-building-reproducible-data-analytics-20231109}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}}.
+      Co-developed the \href{https://www.codema.ie/our-work/dublin-region-energy-master-plan/}{\raisebox{-0.05\height}\faGlobe\ \underline{Dublin Energy Masterplan}} (as part of a team of four) to estimate the impact of local \& regional energy policy decisions on the Dublin energy system, \& in the process:
+      \begin{itemize}
+        \item 
+        Developed an open source data pipeline, energy model \& toolkit to generate the report data and visuals reproducibly (see \href{https://www.rowanmolony.com/post/on-building-reproducible-data-analytics-20231109}{\raisebox{-0.05\height}\faGlobe\ \underline{my blog}} or \href{https://github.com/codema-dev/projects}{\raisebox{-0.1\height}\faGithub\ \underline{codema-dev/projects}}).
+        \item Co-founded a community of energy researchers to ease collaboration (\href{https://github.com/energy-modelling-ireland/wiki}{\raisebox{-0.1\height}\faGithub\ \underline{energy-modelling-ireland/wiki}})
+      \end{itemize}
   }
 
 %-----------
@@ -204,7 +213,7 @@
   {C++, MATLAB}
   {
     \item 
-    Awarded a 1st class honours for both degrees, and a gold medal for averaging over 80\% in undergraduate results.
+    Awarded a 1st class honours for both degrees \& a gold medal for averaging over 80\% in undergraduate results.
   }
 
 %-----------
